// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconFont 1`] = `
<span
  className="icon icon-iconA"
/>
`;

exports[`IconFont 2`] = `
<span
  className="icon icon-iconB"
/>
`;

exports[`NowLoading 1`] = `
<div
  className="niceLoader"
/>
`;

exports[`UserIconWithHost can show default icon if not avatar was present 1`] = `
<span
  className="userIcon with-host"
  onClick={undefined}
>
  <img
    alt="shn@oppai.tokyo"
    className="userIcon-avatar"
    src="/images/no-avatar.png"
    title="shn@oppai.tokyo"
  />
  <img
    className="userIcon-host"
    src="https://oppai.tokyo/favicon.ico"
  />
</span>
`;

exports[`UserIconWithHost can show user icon 1`] = `
<span
  className="userIcon with-host"
  onClick={undefined}
>
  <img
    alt="shn@oppai.tokyo"
    className="userIcon-avatar"
    src="https://ot-mastodon.s3.amazonaws.com/accounts/avatars/000/000/001/original/2408e330e310f168.png?1492583237"
    title="shn@oppai.tokyo"
  />
  <img
    className="userIcon-host"
    src="https://oppai.tokyo/favicon.ico"
  />
</span>
`;
